/*
 * This file was generated by the Gradle 'init' task.
 *
 * This project uses @Incubating APIs which are subject to change.
 */

plugins {
    id 'java'
    id 'maven-publish'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

javafx {
    version = "11"
    modules = ['javafx.controls', 'javafx.fxml']
}

repositories {
    mavenLocal()
    maven {
        url = uri('https://maven.aliyun.com/repository/public/')
    }
    mavenCentral()
}

dependencies {
    implementation 'com.jfoenix:jfoenix:9.0.10'
    implementation 'org.openjfx:javafx-controls:18.0.1'
    implementation 'org.openjfx:javafx-fxml:18.0.1'
    implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
    implementation 'net.bramp.ffmpeg:ffmpeg:0.7.0'
    implementation 'uk.co.caprica:vlcj-javafx:1.0.3'
    implementation 'org.kordamp.ikonli:ikonli-materialdesign2-pack:12.3.1'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
    testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
}

run {
    applicationDefaultJvmArgs += [
            "--add-opens", "java.base/java.lang.reflect=ALL-UNNAMED",
            "--add-opens", "javafx.graphics/javafx.css=ALL-UNNAMED",
            "--add-opens", "javafx.base/com.sun.javafx.runtime=ALL-UNNAMED",
            "--add-opens", "javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
            "--add-opens", "javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
            "--add-opens", "javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
            "--add-opens", "javafx.base/com.sun.javafx.event=ALL-UNNAMED",
            "--add-opens", "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
            "--add-opens", "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
            "--add-exports", "javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
            "--add-exports", "javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
            "--add-exports", "javafx.base/com.sun.javafx.binding=com.jfoenix",
            "--add-exports", "javafx.base/com.sun.javafx.event=com.jfoenix",
            "--add-exports", "javafx.graphics/com.sun.javafx.stage=com.jfoenix",
            "--add-exports", "javafx.graphics/com.sun.javafx.scene=com.jfoenix",
            "--add-exports", "javafx.graphics/com.sun.javafx.scene.text=com.jfoenix",
            "--add-exports", "javafx.graphics/com.sun.javafx.geom=com.jfoenix",
            "--add-exports", "javafx.graphics/com.sun.javafx.util=com.jfoenix",
            "--add-exports", "javafx.graphics/com.sun.javafx.scene.traversal=com.jfoenix"
    ]
}

group = 'cn.gaein.video'
version = '1.0-SNAPSHOT'
description = 'VideoTool'
java.sourceCompatibility = JavaVersion.VERSION_11

publishing {
    publications {
        maven(MavenPublication) {
            from(components.java)
        }
    }
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}

application {
    mainClass = "cn.gaein.java.video.tool.MainApplication"
}